Add new features. Build Video player. Add dependency bouncycastle.